2016-06-13  Jon Davis  <jond@apple.com>

        Adds support for foreword custom meta and display styles on blog posts.
        https://bugs.webkit.org/show_bug.cgi?id=158707.

        Reviewed by Timothy Hatcher.

        * wp-content/themes/webkit/functions.php:
        * wp-content/themes/webkit/style.css:
        (article .foreword):

2016-06-02  Dean Jackson  <dino@apple.com>

        Update the example for wider color gamut images.

        * blog-files/color-gamut/index.html:

2016-06-02  Dean Jackson  <dino@apple.com>

        Adding some sample images for a blog post on color.

        * blog-files/color-gamut/Flowers-AdobeRGB.jpg: Added.
        * blog-files/color-gamut/Flowers-ProPhoto.jpg: Added.
        * blog-files/color-gamut/Flowers-oog.jpg: Added.
        * blog-files/color-gamut/Flowers-sRGB.jpg: Added.
        * blog-files/color-gamut/Rose-AdobeRGB.jpg: Added.
        * blog-files/color-gamut/Rose-ProPhoto.jpg: Added.
        * blog-files/color-gamut/Rose-oog.jpg: Added.
        * blog-files/color-gamut/Rose-sRGB.jpg: Added.
        * blog-files/color-gamut/index.html: Added.

2016-06-02  Filip Pizlo  <fpizlo@apple.com>

        Fix typos and make some revisions to the B3 docs
        https://bugs.webkit.org/show_bug.cgi?id=158311

        Reviewed by Michael Saboff.
        
        I found typos and fixed them. Also, I clarified some things:
        
        - Is B3 IR platform-agnostic? Sort of. I tried to describe when it is (Values usually behave
          the same way regardless of CPU) and when it isn't (it lets you speak of registers if that's
          what you want to do, for example).
        
        - How does isValidForm really get used? You don't really need to create an Inst to use it.
        
        - Some other incremental improvements to make the docs clearer.

        * docs/b3/assembly-intermediate-representation.html:
        * docs/b3/index.html:
        * docs/b3/intermediate-representation.html:
